--- a/assets/html/GPAGraph.html
+++ b/assets/html/GPAGraph.html
@@ -55,7 +55,7 @@
 
 				for (var i = 0; i < series.data.length; i++) {
 					var point=[];
-					point.push(series.data[i].recordTime);
+					point.push(i);
 					point.push(series.data[i].gpa);
 					datalist.push(point);
 				};
