--- a/assets/html/GPAGraph.html
+++ b/assets/html/GPAGraph.html
@@ -89,8 +89,11 @@
 		// $("button.fetchSeries:first").click();
 
 		// Add the Flot version string to the footer
-
+		
 		$("#footer").prepend("Flot " + $.plot.version + " &ndash; ");
+
+		window.location.href='../';
+		$("#currpath").prepend("current at :"+$(location).attr('href'));
 	});
 
 	</script>
@@ -102,9 +105,6 @@
 	</div>
 
 
-	
-
-
 	<div id="content">
 
 		<div class="demo-container">
@@ -112,6 +112,9 @@
 		</div>
 
 
+	</div>
+	
+	<div id="currpath">
 	</div>
 
 	<div id="footer">
